@@ -18,6 +18,7 @@ Bugs fixed:
 - 3428806 type=null in authorizeFilter call
 - 3419721 reset CMPIValue buffer in str2CMPIValue
 - 3478930 Handle SIGPIPE in providerMgr
+- 3478933 Sequence Number reset issues
 
 Changes in 1.3.13
 =================
